EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Relationship_Auto_Create__c/fields/hed__Campaign_Types__c.field-meta.xml
<CustomField>
    <fullName>hed__Campaign_Types__c</fullName>
    <description>For Auto-Create Relationships based on Campaign Members, the list of Campaign types the automation applies to. This field will be blank for Auto-Create Relationships based on Contacts.</description>
    <inlineHelpText>Para Relaciones creadas automáticamente en base a Miembros de campaña, una lista de tipos de campañas a las que se aplica esta automatización. Este campo estará en blanco para Relaciones creadas automáticamente basadas en Contactos.</inlineHelpText>
    <label>Campaign Types</label>
    <type>TextArea</type>
</CustomField>