EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Relationship_Auto_Create__c/fields/hed__Object__c.field-meta.xml
<CustomField>
    <fullName>hed__Object__c</fullName>
    <description>The API name of the object (either Contact or CampaignMember) that the custom lookup field is on.</description>
    <inlineHelpText>El nombre de API del objeto (ya sea Contact o CampaignMember) en el que se encuentra el campo de consulta.</inlineHelpText>
    <label>Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>