EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Relationship_Auto_Create__c/fields/hed__Relationship_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Relationship_Type__c</fullName>
    <description>The Relationship type (referer, family, etc.) to be created between the base object defined in the Object field, and the lookup object.</description>
    <inlineHelpText>El tipo Relación (el referente, familia, etc.) que se creará entre el objeto base definido en el campo Objeto, y el objeto de consulta.</inlineHelpText>
    <label>Relationship Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>